--- a/package.json
+++ b/package.json
@@ -7,19 +7,10 @@
     "aws-sdk": "^2.94.0",
     "fs-extra": "^4.0.1"
   },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-transform-regenerator": "^6.24.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "watch": "^1.0.2"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "watch \"npm run build && npm run start\" src",
-    "build": "babel src -d build --presets es2015",
-    "start": "node build/app.js"
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
